# Ctrl-Hire

./: .gitignore  README.md  SETUP_KEYS.md  pyproject.toml  run_interview.bat  run_interview.ps1
src/voice_interview_practice_system/: crew.py  main.py  streamlit_app.py
src/voice_interview_practice_system/config/: agents.yaml  analyze_interview_performance.json  conduct_dynamic_interview_session.json  tasks.yaml
