[project]
name = "voice_interview_practice_system"
version = "0.1.0"
description = "voice_interview_practice_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
    "openai>=1.30.0",
    "gTTS>=2.5.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    "openai-whisper>=20231117",
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
voice_interview_practice_system = "voice_interview_practice_system.main:run"
run_crew = "voice_interview_practice_system.main:run"
train = "voice_interview_practice_system.main:train"
replay = "voice_interview_practice_system.main:replay"
test = "voice_interview_practice_system.main:test"
run_with_trigger = "voice_interview_practice_system.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_interview_practice_system"]

[tool.crewai]
type = "crew"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
